--- a/3DiQRegister2/pom.xml
+++ b/3DiQRegister2/pom.xml
@@ -44,7 +44,10 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>1.7.25</version>
 		</dependency>
-
-
-	</dependencies>
+</dependencies>
+    <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 </project>
